--- a/main.html
+++ b/main.html
@@ -9,10 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	
-<div id="text">
-	<p>Welcome to the world of Web development</p>
-	<!-- <h6>Welcome to the world of Web development</h6> -->
-</div>
+<div id="text">Welcome to the world of Web development</div>
 
     <script type="text/javascript" src="./script.js">
 </script>
